--- a/styles/main.css
+++ b/styles/main.css
@@ -6,12 +6,10 @@
 }
 
 body {
-  background: linear-gradient(
-    180deg,
-    #e2f6fc 14.25%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  background-repeat: no-repeat;
+    background-image:
+    linear-gradient( 180deg, #e2f6fc 14.25%, rgba(255, 255, 255, 0) 70%),
+    linear-gradient( 0deg, #e2f6fc 5.25%, rgba(255, 255, 255, 0) 20%);
+    background-repeat: no-repeat;
 }
 
 /* hero section */
